--- a/user_config.DS918+.json
+++ b/user_config.DS918+.json
@@ -4,6 +4,7 @@
     "pid": "0x0001",
     "sn": "17A0PDN123456",
     "mac1": "001132123456"
+    "mac2": "001132123457"
   },
   "synoinfo": {
     "supportsystemperature": "no",
